# infinirust

./: .gitignore  Cargo.toml  README.md  TODO.md  start.sh
config/: blocks.json
src/: cube.rs  lib.rs  main.rs  misc.rs  net.rs
src/game/: background.rs  blocks.rs  camera.rs  chunk.rs  input.rs  misc.rs  mod.rs  overlay.rs  player.rs  renderer.rs  skybox.rs  world.rs
src/mygl/: block_textures.rs  cube_map.rs  gl_smart_pointers.rs  mod.rs  program.rs  text.rs  texture.rs  texture_array.rs  texture_atlas.rs
src/net/: mod.rs  packages.rs
src/server/: handlers.rs  mod.rs  player.rs  stdin.rs  world.rs
src/window/: mod.rs
textures/: LICENCE
world/: players.json  settings.json
