[package]
name = "infinirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.30.10"
winit = "0.28.6"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
nalgebra-glm = "0.18"
image = "0.24"
anyhow = "1.0"
noise = "0.8.2"
ab_glyph = "0.2.21"
tokio = { version = "1", features = ["full"]}