[package]
name = "infinirust"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj-rs = "0.7.4"
gl = "0.14.0"
glutin = "0.32"
winit = "0.30"
glutin-winit = "0.5.0"
raw-window-handle = "0.6"
nalgebra-glm = "0.18"
image = "0.24"
anyhow = "1.0"
noise = "0.8.2"
ab_glyph = "0.2.21"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zerocopy = { version = "0.8", features = ["derive"]}

[profile.release]
debug = true
